--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,7 +13,17 @@
     <h1>My Reading List</h1>
     <ul>
       <% books.forEach(book => { %>
-      <li><a href="/books/<%=book._id;%>"><%=book.title;%></a></li>
+      <li>
+        <a href="/books/<%=book._id;%>"><%=book.title;%></a>
+        <form
+          action="/books/<%=book.id%>?_method=DELETE"
+          method="POST"
+          style="display: inline; margin-left: 16px"
+        >
+          <input type="submit" value="DELETE" />
+        </form>
+        <a href="/books/<%=book._id%>/edit">Edit</a>
+      </li>
       <% }) %>
     </ul>
   </body>
